Fix invisible link

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -10,7 +10,7 @@ body {
 tr {
 	margin: 0 1em 0 0;
 }
-a:link, a:visited, a:active {
+#menu a:link, a:visited, a:active {
 	color: #fff;
 	text-decoration: none;
 }
